infrastructure/configs/base/databases/couchdb/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: couchdb
spec:
  redirectScheme:
    scheme: https
    permanent: true
