infrastructure/configs/base/databases/couchdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb
  namespace: databases
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd,traefik-security-headers@kubernetescrd,traefik-rate-limit-high-frequency@kubernetescrd,traefik-csp@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - couchdb.h0melab.work
      secretName: couchdb-tls-secret
  rules:
    - host: couchdb.h0melab.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchdb-svc-couchdb
                port:
                  number: 5984
